primera prueba con rectangulo verde

--- a/mi_primer_juego/project.properties
+++ b/mi_primer_juego/project.properties
@@ -12,4 +12,5 @@
 
 # Project target.
 target=android-19
-android.library.reference.1=../appcompat_v7_10
+android.library.reference.1=../../AndEngine
+android.library.reference.2=../../../Documents/workspace/OTROANDROIDWP/appcompat_v7
